Fix DevMojoIT.testCapabilitiesConflict on Windows